syntax = "proto3";

// ComponentDefinition.ComponentID=16;
// This parameter is processed by the tool

package decentraland.ecs;
option csharp_namespace = "DCL.ECSComponents";

message PBConeShape {  
  bool with_collisions = 1;
  bool is_pointer_blocker = 2;
  bool visible = 3;
  float radiusTop = 4;
  float radiusBottom = 5;
  float segmentsHeight = 6;
  float segmentsRadial = 7;
  bool openEnded = 8;
  float radius = 9;
  float arc = 10;
}
